포트폴리오 업데이트
링크변경

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </a>
                     </div>
                     <div class="page-box">
-                        <a href="work/Makelink_am/html/dashBoard.html" target="_blank">
+                        <a href="https://kim-heesu.github.io/KHS_project/work/Makelink_am/html/dashBoard.html" target="_blank">
                             <img src="img/img_makelinkAM.jpg" alt="makelink AM 썸네일">
                             <h3>make.link AM</h3>
                             <p>메이크링크 내부관리자 페이지를 디자인부터 혼자 작업하였습니다.</p>
@@ -159,7 +159,7 @@
                         </a>
                     </div>
                     <div class="page-box">
-                        <a href="work/Sub_page/mypage/mypage.html" target="_blank">
+                        <a href="https://kim-heesu.github.io/KHS_project/work/Sub_page/mypage/mypage.html" target="_blank">
                             <img src="img/img_subpage.jpg" alt="subpage 썸네일">
                             <h3>Common sub page</h3>
                             <p>블로그페이 쇼핑몰 스킨에서 공통으로 쓰는<br>common page들을 반응형으로 작업하였습니다.</p>
@@ -167,7 +167,7 @@
                         </a>
                     </div>
                     <div class="page-box">
-                        <a href="work/Lucius/html/main.html" target="_blank">
+                        <a href="https://kim-heesu.github.io/KHS_project/work/Lucius/html/main.html" target="_blank">
                             <img src="img/img_lucius.jpg" alt="lucius 쇼핑몰스킨 썸네일">
                             <h3>Lucius</h3>
                             <p>주얼리판매 컨셉의 쇼핑몰 스킨을 이미지,레이아웃을 포함한<br>모든 디자인과 퍼블리싱을 혼자 작업 하였습니다.</p>
@@ -183,7 +183,7 @@
                         </a>
                     </div>
                     <div class="page-box">
-                        <a href="work/metaverse/2021/index.html" target="_blank">
+                        <a href="https://kim-heesu.github.io/KHS_project/work/metaverse/2021/index.html" target="_blank">
                             <img src="img/img_metaverse.jpg" alt="2021 메타버스 썸네일">
                             <h3>2021메타버스</h3>
                             <p>메인페이지 PC 디자인을 참고하여<br>모바일디자인은 퍼블리싱하면서 맞춰 작업하였습니다.</p>
@@ -191,7 +191,7 @@
                         </a>
                     </div>
                     <div class="page-box">
-                        <a href="work/hm/index.html" target="_blank">
+                        <a href="https://kim-heesu.github.io/KHS_project/work/hm/index.html#0" target="_blank">
                             <img src="img/img_HM.jpg" alt="HM공인중개사 사무소 썸네일">
                             <h3>HM 공인중개사 사무소</h3>
                             <p>의뢰를 받아 반응형으로 작업한 페이지 입니다.<br>현재는 서비스 되고 있지 않아 작업원본링크로 이동됩니다.</p>
@@ -199,7 +199,7 @@
                         </a>
                     </div>
                     <div class="page-box">
-                        <a href="work/Geoje_Seaworld/index.html" target="_blank">
+                        <a href="https://kim-heesu.github.io/KHS_project/work/Geoje_Seaworld/index.html" target="_blank">
                             <img src="img/img_geoje.jpg" alt="거제씨월드 썸네일">
                             <h3>Geoje Seaworld(오픈예정)</h3>
                             <p>최상단에서 다음섹션으로 넘어갈때는 휠 한번으로 이동되고<br>올라올때는 일반적으로 스크롤이동이 되게 작업하였습니다.</p>
