--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <a href="https://www.yanadoo.co.kr/promotion-landing/yanadooUniversity.html" target="_blank">
                             <img src="img/img_university.jpg" alt="Yanadoo University 썸네일">
                             <h3>Yanadoo University</h3>
-                            <p>기존 컨벤션에 최대한 맞춰 작업한<br>Yanadoo University 페이지 입니다.</p>
+                            <p>기존 컨벤션에 최대한 맞춰 작업한 입학소개 페이지 입니다.</p>
                             <p>반응형 / Publishing 100%</p>
                         </a>
                     </div>
