--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 <body>
 <div class="wrap">
     <header>
-        <h1><a href="#">Web Publisher <span>Soo</span></a></h1>
+        <h1><a href="#pageTop">Web Publisher <span>Soo</span></a></h1>
         <button type="button" class="btn-menu">메뉴</button>
         <div class="menu-area">
             <div class="menu-content">
                 <h2>How to Contact</h2>
                 <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
                 <ul>
-                    <li><a href="#">Kakao talk 오픈채팅</a></li>
-                    <li><a href="#">Kmong service</a></li>
-                    <li><a href="#">h_ssoo@naver.com</a></li>
+                    <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
+                    <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong service</a></li>
+                    <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
                 </ul>
                 <div class="copyright">
                     <b>Web publisher Soo</b>
@@ -33,7 +33,7 @@
             </div>
         </div>
     </header>
-    <section class="main-visual">
+    <section class="main-visual" id="pageTop">
         <div class="main-text">
             <h2>PORT<br>FOLIO</h2>
             <p><b>KIM HEE SU.</b> WEB PUBLISHER</p>
@@ -276,9 +276,9 @@
             <h2>How to Contact</h2>
             <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
             <ul>
-                <li><a href="#">Kakao talk 오픈채팅</a></li>
-                <li><a href="#">Kmong service</a></li>
-                <li><a href="#">h_ssoo@naver.com</a></li>
+                <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
+                <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong service</a></li>
+                <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
             </ul>
             <div class="copyright">
                 <b>Web publisher Soo</b>
