--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
                 <ul>
                     <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
-                    <li>Kmong은 잠시 쉬고있습니다</li>
+                    <li><a href="https://kmong.com/gig/280667">Kmong 서비스</a></li>
                     <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
                 </ul>
                 <div class="copyright">
@@ -231,22 +231,6 @@
                         </a>
                     </div>
                     <div class="page-box">
-                        <a href="https://www.yanadoo.co.kr/promotion-landing/tabPackage.html" target="_blank">
-                            <img src="img/img_tappackage.jpg" alt="Tap Package 썸네일">
-                            <h3>Tap Package</h3>
-                            <p>기존 컨벤션에 최대한 맞춰 작업한 탭패키지페이지 입니다.</p>
-                            <p>반응형 / Publishing 100%</p>
-                        </a>
-                    </div>
-                    <div class="page-box">
-                        <a href="https://www.yanadoo.co.kr/promotion-landing/yanadooUniversity.html" target="_blank">
-                            <img src="img/img_university.jpg" alt="Yanadoo University 썸네일">
-                            <h3>Yanadoo University</h3>
-                            <p>기존 컨벤션에 최대한 맞춰 작업한 입학소개 페이지 입니다.</p>
-                            <p>반응형 / Publishing 100%</p>
-                        </a>
-                    </div>
-                    <div class="page-box">
                         <a href="http://www.blogpay.co.kr/submenu/info/basicadmin.html" target="_blank">
                             <img src="img/img_basicadmin.jpg" alt="베이직어드민 썸네일">
                             <h3>Basic Admin</h3>
@@ -277,7 +261,7 @@
             <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
             <ul>
                 <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
-                <li>Kmong은 잠시 쉬고있습니다</li>
+                <li><a href="https://kmong.com/gig/280667">Kmong 서비스</a></li>
                 <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
             </ul>
             <div class="copyright">
