야나두 프로모션 추가
야나두 프로모션추가

--- a/index.html
+++ b/index.html
@@ -132,6 +132,33 @@
                         </p>
                     </a>
                 </li>
+                <li>
+                    <div class="img-area">
+                        <div class="slide-wrap">
+                            <div class="promotion-slide">
+                                <a href="https://www.yanadoo.co.kr/promotion-landing/laptopPackage.html">
+                                    <img src="img/img_laptoppackage.jpg" alt="야나두 기기결합랜딩 프로모션">
+                                </a>
+                                <a href="https://www.yanadoo.co.kr/promotion-landing/yanadooUniversity.html">
+                                    <img src="img/img_university.jpg" alt="야나두 유니버시티 입학소개">
+                                </a>
+                                <a href="https://www.yanadoo.co.kr/promotion-landing/bestAwards.html">
+                                    <img src="img/img_tenpackage.jpg" alt="야나두 10분영어 패키지">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="label-list">
+                            <span class="green">퍼블리싱 100%</span>
+                            <span class="blue">반응형</span>
+                        </div>
+                    </div>
+                    <h3>Yanadoo 프로모션</h3>
+                    <p>
+                        이미지를 누르면 해당 프로모션 페이지로 이동됩니다.<br>
+                        슬라이드를 제외한 모든 모션은 플러그인을 사용하지않고 직접 구현하였습니다.<br>
+                        기기결합랜딩에는 grid 레이아웃을 사용하였습니다.
+                    </p>
+                </li>
             </ul>
         </div>
     </section>
