야나두 프로모션페이지 수정
야나두 프로모션페이지 새창으로 이동되게 수정

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                     <div class="img-area">
                         <div class="slide-wrap">
                             <div class="promotion-slide">
-                                <a href="https://www.yanadoo.co.kr/promotion-landing/laptopPackage.html">
+                                <a href="https://www.yanadoo.co.kr/promotion-landing/laptopPackage.html" target="_blank">
                                     <img src="img/img_laptoppackage.jpg" alt="야나두 기기결합랜딩 프로모션">
                                 </a>
-                                <a href="https://www.yanadoo.co.kr/promotion-landing/yanadooUniversity.html">
+                                <a href="https://www.yanadoo.co.kr/promotion-landing/yanadooUniversity.html" target="_blank">
                                     <img src="img/img_university.jpg" alt="야나두 유니버시티 입학소개">
                                 </a>
-                                <a href="https://www.yanadoo.co.kr/promotion-landing/bestAwards.html">
+                                <a href="https://www.yanadoo.co.kr/promotion-landing/bestAwards.html" target="_blank">
                                     <img src="img/img_tenpackage.jpg" alt="야나두 10분영어 패키지">
                                 </a>
                             </div>
