--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
                 <ul>
                     <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
-                    <li><a href="https://kmong.com/gig/280667">Kmong 서비스</a></li>
+                    <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
                     <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
                 </ul>
                 <div class="copyright">
@@ -288,7 +288,7 @@
             <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
             <ul>
                 <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
-                <li><a href="https://kmong.com/gig/280667">Kmong 서비스</a></li>
+                <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
                 <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
             </ul>
             <div class="copyright">
