--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                                 <a href="https://www.yanadoo.co.kr/promotion-landing/yanadooUniversity.html" target="_blank">
                                     <img src="img/img_university.jpg" alt="야나두 유니버시티 입학소개">
                                 </a>
-                                <a href="https://www.yanadoo.co.kr/promotion-landing/bestAwards.html" target="_blank">
-                                    <img src="img/img_tenpackage.jpg" alt="야나두 10분영어 패키지">
+                                <a href="https://www.yanadoo.co.kr/promotion-landing/tripEnglish.html" target="_blank">
+                                    <img src="img/tripenglish.jpg" alt="야나두 영어 단과상품 여행영어">
                                 </a>
                             </div>
                         </div>
@@ -156,7 +156,6 @@
                     <p>
                         이미지를 누르면 해당 프로모션 페이지로 이동됩니다.<br>
                         슬라이드를 제외한 모든 모션은 플러그인을 사용하지않고 직접 구현하였습니다.<br>
-                        기기결합랜딩에는 grid 레이아웃을 사용하였습니다.
                     </p>
                 </li>
             </ul>
