--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
 <body>
 <div class="wrap">
     <header>
-        <h1><a href="#pageTop">Web Publisher <span>Soo</span></a></h1>
+        <h1><a href="#pageTop">Frontend developer <span>Soo</span></a></h1>
         <button type="button" class="btn-menu">메뉴</button>
         <div class="menu-area">
             <div class="menu-content">
                 <h2>How to Contact</h2>
                 <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
                 <ul>
-                    <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
+                    <li><a href="https://studysu.tistory.com/" target="_blank">studysu.tistory</a></li>
                     <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
+                    <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
                     <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
                 </ul>
                 <div class="copyright">
-                    <b>Web publisher Soo</b>
+                    <b>Frontend developer Soo</b>
                     <p>@Copyright Kim hee su. All rights reserved.</p>
                 </div>
             </div>
@@ -36,7 +37,7 @@
     <section class="main-visual" id="pageTop">
         <div class="main-text">
             <h2>PORT<br>FOLIO</h2>
-            <p><b>KIM HEE SU.</b> WEB PUBLISHER</p>
+            <p><b>KIM HEE SU.</b> Frontend developer</p>
             <div class="rotate-border">
                 <span class="ico-twinkle"></span>
                 <span class="ico-twinkle-sm"></span>
@@ -71,8 +72,7 @@
                 <div class="skill-img">
                     <img src="img/img_skill.png" alt="profile images">
                 </div>
-                <ul>
-                </ul>
+                <ul></ul>
             </div>
         </div>
     </section>
@@ -81,6 +81,27 @@
             <h2>Portfolio</h2>
             <p>클릭하시면 페이지로 이동됩니다.</p>
             <ul>
+                <li>
+                    <a href="https://b2b.yanadoo.co.kr/test01/sign-in" target="_blank">
+                        <div class="img-area">
+                            <img src="yanadooB2B.jpg" alt="야나두 b2b 사이트">
+                            <div class="label-list">
+                                <span class="green">프론트개발 60%</span>
+                                <span class="blue">반응형</span>
+                            </div>
+                        </div>
+                        <h3>Yanadoo B2B</h3>
+                        <p>
+                            Vue.js를 사용한 야나두 영어 B2B 사이트입니다.<br>
+                            Axios를 통해 서버와 데이터를 비동기적으로 주고받으며, CRUD기능을 구현하였습니다.<br>
+                            페이지네이션, 모달동작, GNB, 로딩, 404 등 공통으로 사용되는 대부분의 컴포넌트를 개발하였습니다.<br>
+                            상태관리는 Vuex를 사용하였습니다.<br>
+                            (작업내용: 공통컴포넌트, 메인, 검색, 상품관련, 라우터설정, Vuex도입)<br><br>
+                            
+                            테스트 로그인 ID : hitest / PW : test123!
+                        </p>
+                    </a>
+                </li>
                 <li>
                     <a href="http://make.link/" target="_blank">
                         <div class="img-area">
@@ -155,7 +176,7 @@
                     <h3>Yanadoo 프로모션</h3>
                     <p>
                         이미지를 누르면 해당 프로모션 페이지로 이동됩니다.<br>
-                        슬라이드를 제외한 모든 모션은 플러그인을 사용하지않고 직접 구현하였습니다.<br>
+                        슬라이드를 제외한 모든 모션은 직접 구현하였습니다.<br>
                     </p>
                 </li>
             </ul>
@@ -286,12 +307,13 @@
             <h2>How to Contact</h2>
             <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
             <ul>
-                <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
+                <li><a href="https://studysu.tistory.com/" target="_blank">studysu.tistory</a></li>
                 <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
+                <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
                 <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
             </ul>
             <div class="copyright">
-                <b>Web publisher Soo</b>
+                <b>Frontend developer Soo</b>
                 <p>@Copyright Kim hee su. All rights reserved.</p>
             </div>
         </div>
