--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section class="about-me">
         <div class="inner">
-            <h2>안녕하세요!<br>웹 퍼블리셔 김희수 입니다.</h2>
+            <h2>안녕하세요!<br>프론트엔드 개발자 김희수 입니다.</h2>
             <div class="content">
                 <p>
                     웹페이지는 만든다고 끝이 아니죠!<br>
