--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li>
                     <a href="https://b2b.yanadoo.co.kr/test01/sign-in" target="_blank">
                         <div class="img-area">
-                            <img src="yanadooB2B.jpg" alt="야나두 b2b 사이트">
+                            <img src="img/yanadooB2B.jpg" alt="야나두 b2b 사이트">
                             <div class="label-list">
                                 <span class="green">프론트개발 60%</span>
                                 <span class="blue">반응형</span>
