--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='css/layout.css' rel='stylesheet' type='text/css'>
 
     <script src="js/jquery-3.5.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/layout.js"></script>
 </head>
@@ -34,6 +35,32 @@
             </div>
         </div>
     </header>
+    <section class="contact">
+        <div class="inner-col">
+            <h2>Contact me</h2>
+            <form>
+                <ul>
+                    <li>
+                        <label for="contactName">Name</label>
+                        <input type="text" id="contactName" name="to_name" placeholder="성함을 입력해주세요.">
+                    </li>
+                    <li>
+                        <label for="contactEmail">Email</label>
+                        <input type="text" id="contactEmail" name="to_email" placeholder="이메일을 입력해주세요.">
+                    </li>
+                    <li>
+                        <label for="contactPhone">Phone</label>
+                        <input type="text" id="contactPhone" name="to_phone" placeholder="번호를 입력해주세요.">
+                    </li>
+                    <li>
+                        <label for="contactContent">content</label>
+                        <input type="text" id="contactContent" name="to_content" placeholder="내용을 입력해주세요.">
+                    </li>
+                </ul>
+                <button type="button" class="btn-contact" onclick="sendEmail()">SEND</button>
+            </form>
+        </div>
+    </section>
     <section class="main-visual" id="pageTop">
         <div class="main-text">
             <h2>PORT<br>FOLIO</h2>
