contact 영역 주석처리

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </header>
-    <section class="contact">
+    <!-- <section class="contact">
         <div class="inner-col">
             <h2>Contact me</h2>
             <form>
@@ -60,7 +60,7 @@
                 <button type="button" class="btn-contact" onclick="sendEmail()">SEND</button>
             </form>
         </div>
-    </section>
+    </section> -->
     <section class="main-visual" id="pageTop">
         <div class="main-text">
             <h2>PORT<br>FOLIO</h2>
