--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         </div>
     </header>
     <!-- <section class="contact">
-        <div class="inner-col">
+        <div class="inner">
             <h2>Contact me</h2>
+            <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
             <form>
                 <ul>
                     <li>
@@ -45,12 +46,12 @@
                         <input type="text" id="contactName" name="to_name" placeholder="성함을 입력해주세요.">
                     </li>
                     <li>
-                        <label for="contactEmail">Email</label>
-                        <input type="text" id="contactEmail" name="to_email" placeholder="이메일을 입력해주세요.">
-                    </li>
-                    <li>
                         <label for="contactPhone">Phone</label>
                         <input type="text" id="contactPhone" name="to_phone" placeholder="번호를 입력해주세요.">
+                    </li>
+                    <li>
+                        <label for="contactEmail">Email</label>
+                        <input type="text" id="contactEmail" name="to_email" placeholder="이메일을 입력해주세요.">
                     </li>
                     <li>
                         <label for="contactContent">content</label>
@@ -324,6 +325,7 @@
             </div>
         </div>
     </section>
+
     <!-- <section class="design">
         <div class="inner">
             <h2>간단한 디자인도 가능합니다.</h2>
