--- a/index.html
+++ b/index.html
@@ -165,23 +165,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://blogpay.co.kr/" target="_blank">
-                        <div class="img-area">
-                            <img src="img/img_port_blogpay.jpg" alt="블로그페이">
-                            <div class="label-list">
-                                <span class="green">퍼블리싱 40%</span>
-                                <span class="blue">반응형</span>
-                            </div>
-                        </div>
-                        <h3>Blogpay</h3>
-                        <p>
-                            소규모사업을 하는 판매자를 타겟으로 삼은<br>
-                            쇼핑몰솔루션 블로그페이 홈페이지 리뉴얼 작업에 참여하였습니다.<br>
-                            주로 랜딩페이지들을 작업하였으며, 리뉴얼 작업이 끝난뒤에는 유지보수담당을 맡았습니다.
-                        </p>
-                    </a>
-                </li>
-                <li>
                     <div class="img-area">
                         <div class="slide-wrap">
                             <div class="promotion-slide">
@@ -205,6 +188,29 @@
                     <p>
                         이미지를 누르면 해당 프로모션 페이지로 이동됩니다.<br>
                         슬라이드를 제외한 모든 모션은 직접 구현하였습니다.<br>
+                    </p>
+                </li>
+                <li>
+                    <div class="img-area">
+                        <div class="slide-wrap">
+                            <div class="pet-promotion-slide">
+                                <a href="https://www.puppycat.co.kr/" target="_blank">
+                                    <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
+                                </a>
+                                <a href="https://m.pawrest.co.kr/" target="_blank">
+                                    <img src="img/img_pawrest.jpg" alt="포레스트 인트로 페이지 모바일">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="label-list">
+                            <span class="green">퍼블리싱 100%</span>
+                        </div>
+                    </div>
+                    <h3>퍼피캣,포레스트 인트로</h3>
+                    <p>
+                        퍼피캣은 반응형, 포레스트는 모바일전용 페이지로 제작된 <br>
+                        인트로 페이지입니다.<br>
+                        오픈전이라 페이지 내 내용들은 추후 수정 될 예정입니다.
                     </p>
                 </li>
             </ul>
