--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="https://studysu.tistory.com/" target="_blank">studysu.tistory</a></li>
                     <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
-                    <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
+                    <li><a href="https://open.kakao.com/o/seyzgv4f" target="_blank">Kakao talk 오픈채팅</a></li>
                     <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
                 </ul>
                 <div class="copyright">
@@ -344,7 +344,7 @@
             <ul>
                 <li><a href="https://studysu.tistory.com/" target="_blank">studysu.tistory</a></li>
                 <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
-                <li><a href="https://open.kakao.com/o/seb4lFld" target="_blank">Kakao talk 오픈채팅</a></li>
+                <li><a href="https://open.kakao.com/o/seyzgv4f" target="_blank">Kakao talk 오픈채팅</a></li>
                 <li><a href="mailto:h_ssoo@naver.com">h_ssoo@naver.com</a></li>
             </ul>
             <div class="copyright">
