--- a/index.html
+++ b/index.html
@@ -190,28 +190,22 @@
                         슬라이드를 제외한 모든 모션은 직접 구현하였습니다.<br>
                     </p>
                 </li>
-                <li>
-                    <div class="img-area">
-                        <div class="slide-wrap">
-                            <div class="pet-promotion-slide">
-                                <a href="https://www.puppycat.co.kr/" target="_blank">
-                                    <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
-                                </a>
-                                <a href="https://m.pawrest.co.kr/" target="_blank">
-                                    <img src="img/img_pawrest.jpg" alt="포레스트 인트로 페이지 모바일">
-                                </a>
+
+				<li>
+                    <a href="https://www.puppycat.co.kr/" target="_blank">
+                        <div class="img-area">
+                            <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
+                            <div class="label-list">
+                                <span class="green">퍼블리싱 100%</span>
+                                <span class="blue">반응형</span>
                             </div>
                         </div>
-                        <div class="label-list">
-                            <span class="green">퍼블리싱 100%</span>
-                        </div>
-                    </div>
-                    <h3>퍼피캣,포레스트 인트로</h3>
-                    <p>
-                        퍼피캣은 반응형, 포레스트는 모바일전용 페이지로 제작된 <br>
-                        인트로 페이지입니다.<br>
-                        오픈전이라 페이지 내 내용들은 추후 수정 될 예정입니다.
-                    </p>
+                        <h3>퍼피캣 인트로페이지</h3>
+                        <p>
+							반응형으로 제작된 인트로 페이지입니다.<br>
+							오픈전이라 페이지 내 내용들은 추후 수정 될 예정입니다.
+                        </p>
+                    </a>
                 </li>
             </ul>
         </div>
