반응형작업

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     </section>
     <section class="about-skill">
         <div class="inner">
-            <h2>제가 잘하고 경험해본 것들을<br>소개합니다.</h2>
+            <h2>Technology stack</h2>
+            <p>(work tools/skills)</p>
             <div class="content">
                 <div class="skill-img">
                     <img src="img/img_skill.png" alt="profile images">
@@ -212,7 +213,7 @@
     </section>
     <section class="other">
         <div class="inner">
-            <h2>그 외의 더 많은 작업물도 확인해보세요</h2>
+            <h2>그 외의 더 많은 작업물도 <br class="mobile-br">확인해보세요</h2>
             <div class="slide-wrap">
                 <div class="page-slide">
                     <div class="page-box">
