--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="menu-area">
             <div class="menu-content">
                 <h2>How to Contact</h2>
-                <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
+                <p>무엇이든 편하게 문의주세요 :)</p>
                 <ul>
                     <li><a href="https://studysu.tistory.com/" target="_blank">studysu.tistory</a></li>
                     <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
@@ -38,7 +38,7 @@
     <!-- <section class="contact">
         <div class="inner">
             <h2>Contact me</h2>
-            <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
+            <p>무엇이든 편하게 문의주세요 :)</p>
             <form>
                 <ul>
                     <li>
@@ -335,7 +335,7 @@
     <footer>
         <div class="inner">
             <h2>How to Contact</h2>
-            <p>연락 주시면 늦어도 3일 이내에 답변드립니다!</p>
+            <p>무엇이든 편하게 문의주세요 :)</p>
             <ul>
                 <li><a href="https://studysu.tistory.com/" target="_blank">studysu.tistory</a></li>
                 <li><a href="https://kmong.com/gig/280667" target="_blank">Kmong 서비스</a></li>
