--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
             <h2>안녕하세요!<br>프론트엔드 개발자 김희수 입니다.</h2>
             <div class="content">
                 <p>
-                    웹페이지는 만든다고 끝이 아니죠!<br>
-                    <b>디자인과 똑같은</b> 화면은 물론,<br>
-                    유지보수 또한 쉬운 <b>탄탄한 코드</b>를 만드는것<br>
-                    내 작업에 <b>책임감</b>을 가지고<br>
-                    <b>보람차게 일하는 것</b><br>
-                    제가 제일 잘하고 좋아하는 일입니다.  
+			웹페이지 제작은 완성이 끝이 아닙니다.<br>
+			<b>디자인과 동일한</b> 화면을 구현하고,<br>
+			유지보수가 쉬운 <b>탄탄한 코드</b>를 작성하며,<br>
+			제 작업에 <b>책임감</b>을 가지고<br>
+			<b>보람차게 일하는 것</b>이<br>
+			제가 가장 잘하고 좋아하는 일입니다.
                 </p>
                 <div class="profile-img">
                     <img src="img/img_profile.png" alt="profile images">
