--- a/index.html
+++ b/index.html
@@ -131,6 +131,22 @@
                         </p>
                     </a>
                 </li>
+		<li>
+                    <a href="https://nuxt-puppy-cat.vercel.app/" target="_blank">
+                        <div class="img-area">
+                            <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
+                            <div class="label-list">
+                                <span class="green">퍼블리싱 100%</span>
+                                <span class="blue">반응형</span>
+                            </div>
+                        </div>
+                        <h3>퍼피캣 인트로페이지</h3>
+                        <p>
+                            반응형으로 제작된 인트로 페이지입니다.<br>
+                            추후 추가될 페이지와 SEO최적화를 고려하여 Nuxt.js를 사용해 만들었습니다.
+                        </p>
+                    </a>
+                </li>
                 <li>
                     <a href="http://make.link/" target="_blank">
                         <div class="img-area">
@@ -171,23 +187,6 @@
                         이미지를 누르면 해당 프로모션 페이지로 이동됩니다.<br>
                         슬라이드를 제외한 모든 모션은 직접 구현하였습니다.<br>
                     </p>
-                </li>
-
-				<li>
-                    <a href="https://www.puppycat.co.kr/" target="_blank">
-                        <div class="img-area">
-                            <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
-                            <div class="label-list">
-                                <span class="green">퍼블리싱 100%</span>
-                                <span class="blue">반응형</span>
-                            </div>
-                        </div>
-                        <h3>퍼피캣 인트로페이지</h3>
-                        <p>
-							반응형으로 제작된 인트로 페이지입니다.<br>
-							오픈전이라 페이지 내 내용들은 추후 수정 될 예정입니다.
-                        </p>
-                    </a>
                 </li>
             </ul>
         </div>
