--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <h3>Yanadoo B2B</h3>
                         <p>
                             Vue.js를 사용한 야나두 영어 B2B 사이트입니다.<br>
-                            Axios를 통해 서버와 데이터를 비동기적으로 주고받으며, CRUD기능을 구현하였습니다.<br>
+                            Axios를 통해 서버와 데이터를 비동기적으로 주고받으며, CRUD기능을 연동하였습니다.<br>
                             페이지네이션, 모달동작, GNB, 로딩, 404 등 공통으로 사용되는 대부분의 컴포넌트를 개발하였습니다.<br>
                             상태관리는 Vuex를 사용하였습니다.<br>
                             (작업내용: 공통컴포넌트, 메인, 검색, 상품관련, 라우터설정, Vuex도입)<br><br>
