--- a/index.html
+++ b/index.html
@@ -131,22 +131,6 @@
                         </p>
                     </a>
                 </li>
-		<li>
-                    <a href="https://nuxt-puppy-cat.vercel.app/" target="_blank">
-                        <div class="img-area">
-                            <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
-                            <div class="label-list">
-                                <span class="green">퍼블리싱 100%</span>
-                                <span class="blue">반응형</span>
-                            </div>
-                        </div>
-                        <h3>퍼피캣 인트로페이지</h3>
-                        <p>
-                            반응형으로 제작된 인트로 페이지입니다.<br>
-                            추후 추가될 페이지와 SEO최적화를 고려하여 Nuxt.js를 사용해 만들었습니다.
-                        </p>
-                    </a>
-                </li>
                 <li>
                     <a href="http://make.link/" target="_blank">
                         <div class="img-area">
@@ -169,24 +153,50 @@
                     <div class="img-area">
                         <div class="slide-wrap">
                             <div class="promotion-slide">
+			    	<a href="https://lady.co.kr/main/html.php?htmid=promotion/e250601/event" target="_blank">
+                                    <img src="img/ladybigsale.jpg" alt="레이디 2025 상반기 결산">
+                                </a>
+			    	<a href="https://www.4thehome.co.kr/main/html.php?htmid=promotion/awards/event.html" target="_blank">
+                                    <img src="img/forbestawards.jpg" alt="포더홈 Best Awards">
+                                </a>
+			    	<a href="https://lady.co.kr/main/html.php?htmid=promotion/initial_quiz/202506/event.html" target="_blank">
+                                    <img src="img/ladyinitial.jpg" alt="레이디 초성퀴즈">
+                                </a>
+			    	<a href="https://www.lady.co.kr/main/html.php?htmid=promotion/hotelsofa/250520/event" target="_blank">
+                                    <img src="img/ladyhotel.jpg" alt="레이디 호텔침대 MEGA WEEK">
+                                </a>
                                 <a href="https://www.yanadoo.co.kr/promotion-landing/tripEnglish.html" target="_blank">
                                     <img src="img/tripenglish.jpg" alt="야나두 영어 단과상품 여행영어">
-                                </a>
-                                <a href="https://www.yanadoo.co.kr/promotion-landing/laptopPackage.html" target="_blank">
-                                    <img src="img/img_laptoppackage.jpg" alt="야나두 기기결합랜딩 프로모션">
                                 </a>
                             </div>
                         </div>
                         <div class="label-list">
                             <span class="green">퍼블리싱 100%</span>
-                            <span class="blue">반응형</span>
+                            <span class="blue">반응형(일부)</span>
                         </div>
                     </div>
-                    <h3>Yanadoo 프로모션</h3>
+                    <h3>프로모션 페이지</h3>
                     <p>
-                        이미지를 누르면 해당 프로모션 페이지로 이동됩니다.<br>
-                        슬라이드를 제외한 모든 모션은 직접 구현하였습니다.<br>
+			자바스크립트를 활용해 다양한 모션 효과를 구현했으며,<br>
+			기획전 내에서는 유입된 유저에 따라 유튜브 영상의 시작 시간을 제어하거나<br>특정 시간까지 카운트다운되는 타이머 등 공통 기능들을 프론트엔드에서 제어할 수 있도록 리팩토링했습니다.<br>
+			또한, 기획전마다 필요한 프론트 로직을 구현하여 기획 의도에 맞는 화면 동작을 완성했습니다.
                     </p>
+                </li>
+		<li>
+                    <a href="https://nuxt-puppy-cat.vercel.app/" target="_blank">
+                        <div class="img-area">
+                            <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
+                            <div class="label-list">
+                                <span class="green">퍼블리싱 100%</span>
+                                <span class="blue">반응형</span>
+                            </div>
+                        </div>
+                        <h3>퍼피캣 인트로페이지</h3>
+                        <p>
+                            반응형으로 제작된 인트로 페이지입니다.<br>
+                            추후 추가될 페이지와 SEO최적화를 고려하여 Nuxt.js를 사용해 만들었습니다.
+                        </p>
+                    </a>
                 </li>
             </ul>
         </div>
