--- a/index.html
+++ b/index.html
@@ -273,35 +273,35 @@
                 </div>
                 <div class="landing-slide">
                     <div class="page-box">
+                        <a href="https://www.lady.co.kr/main/html.php?htmid=promotion/ssonday/250522/event" target="_blank">
+                            <img src="img/ladyhappy.jpg" alt="레이디 쏜데이 썸네일">
+                            <h3>레이디 오!해피데이</h3>
+                            <p>레이디몰 오해피데이 기획전입니다.</p>
+                            <p>웹,모바일 / Publishing 100%</p>
+                        </a>
+                    </div>
+                    <div class="page-box">
+                        <a href="https://www.eerop.life/main/html.php?htmid=promotion/live/event" target="_blank">
+                            <img src="img/eeroplive.jpg" alt="이롭 라이브 썸네일">
+                            <h3>이롭 라이브</h3>
+                            <p>이롭 셰프 라이브 기념 기획전입니다.</p>
+                            <p>웹,모바일 / Publishing 100%</p>
+                        </a>
+                    </div>
+                    <div class="page-box">
+                        <a href="https://www.lady.co.kr/main/html.php?htmid=promotion/ssonday/250522/event" target="_blank">
+                            <img src="img/ladysson.jpg" alt="레이디 쏜데이 썸네일">
+                            <h3>레이디 쏜데이</h3>
+                            <p>레이디 몰 쏜데이 기획전입니다.</p>
+                            <p>웹,모바일 / Publishing 100%</p>
+                        </a>
+                    </div>
+                    <div class="page-box">
                         <a href="http://www.blogpay.co.kr/submenu/info/easyeditor.html" target="_blank">
                             <img src="img/img_easyeditor.jpg" alt="이지에디터 썸네일">
                             <h3>Easy Editor</h3>
                             <p>눈에 확 뛸 수 있도록 모션 구현이 들어간 페이지 입니다.</p>
                             <p>웹,모바일 / Publishing 100%</p>
-                        </a>
-                    </div>
-                    <div class="page-box">
-                        <a href="https://blogpay.co.kr/submenu/info/designpro.html" target="_blank">
-                            <img src="img/img_designpro.jpg" alt="디자인프로 썸네일">
-                            <h3>Design PRO</h3>
-                            <p>@keyframes을 이용한 움직임이 많이 사용된 페이지 입니다.</p>
-                            <p>웹,모바일 / Publishing 100%</p>
-                        </a>
-                    </div>
-                    <div class="page-box">
-                        <a href="http://www.blogpay.co.kr/submenu/info/basicadmin.html" target="_blank">
-                            <img src="img/img_basicadmin.jpg" alt="베이직어드민 썸네일">
-                            <h3>Basic Admin</h3>
-                            <p>블로그페이 베이직어드민 소개페이지 입니다.</p>
-                            <p>웹,모바일 / Publishing 100%</p>
-                        </a>
-                    </div>
-                    <div class="page-box">
-                        <a href="http://blogpay.co.kr/submenu/info/developer.html" target="_blank">
-                            <img src="img/img_developer.jpg" alt="개발자모집공고 썸네일">
-                            <h3>개발자 모집 공고</h3>
-                            <p>혼자 디자인,퍼블리싱을 같이 작업한 페이지 입니다.</p>
-                            <p>웹,모바일 / Publishing 100% , Design 100%</p>
                         </a>
                     </div>
                 </div>
