--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
                     </div>
                     <h3>프로모션 페이지</h3>
                     <p>
-			자바스크립트를 활용해 다양한 모션 효과를 구현했으며,<br>
-			기획전 내에서는 유입된 유저에 따라 유튜브 영상의 시작 시간을 제어하거나<br>특정 시간까지 카운트다운되는 타이머 등 공통 기능들을 프론트엔드에서 제어할 수 있도록 리팩토링했습니다.<br>
+			자바스크립트와 css로 다양한 모션 효과를 구현했으며,<br>
+			기획전 내에서는 유입된 유저에 따라 유튜브 영상의 시작 시간을 제어하거나<br>
+		    	특정 시간까지 카운트다운되는 타이머 등 공통 기능들을 프론트단에서 제어할 수 있도록 리팩토링했습니다.<br>
 			또한, 기획전마다 필요한 프론트 로직을 구현하여 기획 의도에 맞는 화면 동작을 완성했습니다.
                     </p>
                 </li>
