--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="img-area">
                             <img src="img/yanadooB2B.jpg" alt="야나두 b2b 사이트">
                             <div class="label-list">
-                                <span class="green">프론트개발 60%</span>
+                                <span class="green">프론트개발</span>
                                 <span class="blue">반응형</span>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                         <div class="img-area">
                             <img src="img/img_port_makelink.jpg" alt="메이크링크">
                             <div class="label-list">
-                                <span class="green">퍼블리싱 100%</span>
+                                <span class="green">기여도 100%</span>
                                 <span class="blue">반응형</span>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                         <div class="label-list">
-                            <span class="green">퍼블리싱 100%</span>
+                            <span class="green">기여도 100%</span>
                             <span class="blue">반응형(일부)</span>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                         <div class="img-area">
                             <img src="img/img_puppycat.jpg" alt="퍼피캣 인트로페이지">
                             <div class="label-list">
-                                <span class="green">퍼블리싱 100%</span>
+                                <span class="green">기여도 100%</span>
                                 <span class="blue">반응형</span>
                             </div>
                         </div>
