--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 </div>
                 <div class="landing-slide">
                     <div class="page-box">
-                        <a href="https://www.lady.co.kr/main/html.php?htmid=promotion/ssonday/250522/event" target="_blank">
+                        <a href="https://www.lady.co.kr/main/html.php?htmid=promotion/happy_day/250502/event.html" target="_blank">
                             <img src="img/ladyhappy.jpg" alt="레이디 쏜데이 썸네일">
                             <h3>레이디 오!해피데이</h3>
                             <p>레이디몰 오해피데이 기획전입니다.</p>
