--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
     <link href='css/reset.css' rel='stylesheet' type='text/css'>
     <link href='css/layout.css' rel='stylesheet' type='text/css'>
 
