--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                     <div class="img-area">
                         <div class="slide-wrap">
                             <div class="promotion-slide">
+			    	<a href="https://www.lady.co.kr/main/html.php?htmid=promotion/root/event" target="_blank">
+                                    <img src="img/rootchair.jpg" alt="레이디 루트의자 기획전">
+                                </a>
 			    	<a href="https://lady.co.kr/main/html.php?htmid=promotion/e250601/event" target="_blank">
                                     <img src="img/ladybigsale.jpg" alt="레이디 2025 상반기 결산">
                                 </a>
@@ -166,9 +169,6 @@
                                 </a>
 			    	<a href="https://www.lady.co.kr/main/html.php?htmid=promotion/hotelsofa/250520/event" target="_blank">
                                     <img src="img/ladyhotel.jpg" alt="레이디 호텔침대 MEGA WEEK">
-                                </a>
-                                <a href="https://www.yanadoo.co.kr/promotion-landing/tripEnglish.html" target="_blank">
-                                    <img src="img/tripenglish.jpg" alt="야나두 영어 단과상품 여행영어">
                                 </a>
                             </div>
                         </div>
