--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			제가 가장 잘하고 좋아하는 일입니다.
                 </p>
                 <div class="profile-img">
-                    <img src="img/img_profile.png" alt="profile images">
+                    <img src="img/img_profile02.png" alt="profile images">
                 </div>
             </div>
         </div>
@@ -336,3 +336,4 @@
 </div>
 </body>
 </html>
+
